--- a/package/lean/luci-app-smartinfo/luasrc/view/smartinfo/smart_status.htm
+++ b/package/lean/luci-app-smartinfo/luasrc/view/smartinfo/smart_status.htm
@@ -63,18 +63,18 @@
   }
 </script>
 
-<div class="cbi-section">
-	<h3><%:S.M.A.R.T Status%></h3>
+<fieldset class="cbi-section">
+	<legend><%:S.M.A.R.T Status%></legend>
 	<table class="cbi-section-table" id="smart_status_table">
 		<tr class="cbi-section-table-titles">
-			<th class="cbi-section-table-cell" width="15%"><%:Device%></th>
-			<th class="cbi-section-table-cell" width="30%"><%:Model%></th>
-			<th class="cbi-section-table-cell" width="15%"><%:Size%></th>
-			<th class="cbi-section-table-cell" width="20%"><%:Status%></th>
-			<th class="cbi-section-table-cell" width="20%"><%:Detail%></th>
+			<th class="cbi-section-table-cell"><%:Device%></th>
+			<th class="cbi-section-table-cell"><%:Model%></th>
+			<th class="cbi-section-table-cell"><%:Size%></th>
+			<th class="cbi-section-table-cell"><%:Status%></th>
+			<th class="cbi-section-table-cell"><%:Detail%></th>
 		</tr>
 		<tr class="cbi-section-table-row">
 			<td colspan="4"><em><br /><%:Collecting data...%></em></td>
 		</tr>
 	</table>
-</div>
+</fieldset>
