--- a/package/hong/luci-app-smartinfo/luasrc/view/smartinfo/smart_status.htm
+++ b/package/hong/luci-app-smartinfo/luasrc/view/smartinfo/smart_status.htm
@@ -1,6 +1,6 @@
 <script type="text/javascript">//<![CDATA[
 
-	XHR.poll(5, '<%=luci.dispatcher.build_url("admin", "services", "smartinfo", "status")%>', null,
+	XHR.poll(5, '<%=luci.dispatcher.build_url("admin", "nas", "smartinfo", "status")%>', null,
 		function(x, st)
 		{
 			var tb = document.getElementById('smart_status_table');
@@ -58,23 +58,23 @@
 <script type="text/javascript">
   function show_detail(dev)
   {
-    window.open('<%=luci.dispatcher.build_url("admin", "services", "smartinfo", "smartdetail")%>/' + dev,
+    window.open('<%=luci.dispatcher.build_url("admin", "nas", "smartinfo", "smartdetail")%>/' + dev,
       'newwindow','height=480,width=800,top=100,left=200,toolbar=no,menubar=no,scrollbars=yes, resizable=no,location=no, status=no')
   }
 </script>
 
-<fieldset class="cbi-section">
-	<legend><%:S.M.A.R.T Status%></legend>
+<div class="cbi-section">
+	<h3><%:S.M.A.R.T Status%></h3>
 	<table class="cbi-section-table" id="smart_status_table">
 		<tr class="cbi-section-table-titles">
-			<th class="cbi-section-table-cell"><%:Device%></th>
-			<th class="cbi-section-table-cell"><%:Model%></th>
-			<th class="cbi-section-table-cell"><%:Size%></th>
-			<th class="cbi-section-table-cell"><%:Status%></th>
-			<th class="cbi-section-table-cell"><%:Detail%></th>
+			<th class="cbi-section-table-cell" width="15%"><%:Device%></th>
+			<th class="cbi-section-table-cell" width="30%"><%:Model%></th>
+			<th class="cbi-section-table-cell" width="15%"><%:Size%></th>
+			<th class="cbi-section-table-cell" width="20%"><%:Status%></th>
+			<th class="cbi-section-table-cell" width="20%"><%:Detail%></th>
 		</tr>
 		<tr class="cbi-section-table-row">
 			<td colspan="4"><em><br /><%:Collecting data...%></em></td>
 		</tr>
 	</table>
-</fieldset>
+</div>
