--- a/package/lean/luci-app-qbittorrent/luasrc/view/qbittorrent/qbittorrent_status.htm
+++ b/package/lean/luci-app-qbittorrent/luasrc/view/qbittorrent/qbittorrent_status.htm
@@ -1,13 +1,13 @@
 <script type="text/javascript">//<![CDATA[
-XHR.poll(3, '<%=url([[admin]], [[nas]], [[qBittorrent]], [[status]])%>', null,
+XHR.poll(3, '<%=url([[admin]], [[nas]], [[qbittorrent]], [[status]])%>', null,
 	function(x, data) {
 		var tb = document.getElementById('qBittorrent_status');
 		if (data && tb) {
 			if (data.running) {
-				var links = '<em><b><font color=green>qBittorrent <%:RUNNING%></font></b></em>';
+				var links = '<em><b><font color=green>qBittorrent <%:The qBittorrent service is running.%></font></b></em>';
 				tb.innerHTML = links;
 			} else {
-				tb.innerHTML = '<em><b><font color=red>qBittorrent <%:NOT RUNNING%></font></b></em>';
+				tb.innerHTML = '<em><b><font color=red>qBittorrent <%:The qBittorrent service is not running.%></font></b></em>';
 			}
 		}
 	}
