--- a/package/lean/luci-app-unblockneteasemusic/luasrc/view/unblockneteasemusic/unblockneteasemusic_status.htm
+++ b/package/lean/luci-app-unblockneteasemusic/luasrc/view/unblockneteasemusic/unblockneteasemusic_status.htm
@@ -1,7 +1,7 @@
 <script type="text/javascript">//<![CDATA[
-XHR.poll(3, '<%=url([[admin]], [[services]], [[unblockmusic]], [[status]])%>', null,
+XHR.poll(3, '<%=url([[admin]], [[services]], [[unblockneteasemusic]], [[status]])%>', null,
 	function(x, data) {
-		var tb = document.getElementById('unblockmusic_status');
+		var tb = document.getElementById('unblockneteasemusic_status');
 		if (data && tb) {
 			if (data.running) {
 				var links = '<em><b><font color=green>UnblockNeteaseMusic <%:RUNNING%></font></b></em>';
@@ -16,7 +16,7 @@ XHR.poll(3, '<%=url([[admin]], [[services]], [[unblockmusic]], [[status]])%>', n
 </script>
 <style>.mar-10 {margin-left: 50px; margin-right: 10px;}</style>
 <fieldset class="cbi-section">
-	<p id="unblockmusic_status">
+	<p id="unblockneteasemusic_status">
 		<em><%:Collecting data...%></em>
 	</p>
 </fieldset>
