--- a/package/hong/luci-app-clash/luasrc/view/clash/ping.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/ping.htm
@@ -1,5 +1,5 @@
 <%+cbi/valueheader%>
-<span class="ping" hint="<%=self:cfgvalue(section)%>">-- ms</span>
+<span class="ping" hint="<%=self:cfgvalue(section)%>"><%:Checking...%></span>
 <%+cbi/valuefooter%>
 
  
