--- a/package/hong/luci-app-clash/luasrc/view/clash/clash_upload.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/clash_upload.htm
@@ -1,6 +1,6 @@
 <%+cbi/valueheader%>
 	<label class="cbi-value" style="display:inline-block;" for="ulfile"></label>
-	<input class="cbi-input-file" style="width: 400px" type="file" id="ulfile" name="ulfile" />
-	<input type="submit" class="cbi-button cbi-input-apply" name="upload" value="<%:Upload%>" />
+	<input class="cbi-input-file" style="width: 80%" type="file" id="ulfile" name="ulfile" />
+	<input type="submit" style="width: 100%" class="cbi-button cbi-input-apply" name="upload" value="<%:Upload%>" />
 <%+cbi/valuefooter%>
  
