--- a/package/hong/luci-app-clash/luasrc/view/clash/status_log.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/status_log.htm
@@ -1,5 +1,5 @@
 <%+cbi/valueheader%>
-<script src="/jquery-1.11.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <textarea id="log" class="cbi-input-textarea" style="width: 100%;" data-update="change" rows="29" readonly="readonly" > </textarea>
 
 <script type="text/javascript">//<![CDATA[
