--- a/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/node_list/link_add_node.htm
+++ b/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/node_list/link_add_node.htm
@@ -68,7 +68,7 @@ local dsp = require "luci.dispatcher"
 <div class="cbi-value">
 	<label class="cbi-value-title"><%:Add Node%></label>
 	<div class="cbi-value-field">
-		<input class="cbi-button cbi-button-add" type="button" onclick="open_add_link_div()" value="<%:Add the node via the link%>">
+		<input class="cbi-button cbi-button-add" type="button" onclick="open_add_link_div()" value="<%:Add the node via the link%>" />
 	</div>
 </div>
 
@@ -82,8 +82,8 @@ local dsp = require "luci.dispatcher"
 	<div class="cbi-value">
 		<label class="cbi-value-title"></label>
 		<div class="cbi-value-field">
-			<input class="cbi-button cbi-button-add" type="button" onclick="add_node()" value="<%:Add%>">
-			<input class="cbi-button cbi-button-remove" type="button" onclick="close_add_link_div()" value="<%:Close%>">
+			<input class="cbi-button cbi-button-add" type="button" onclick="add_node()" value="<%:Add%>" />
+			<input class="cbi-button cbi-button-remove" type="button" onclick="close_add_link_div()" value="<%:Close%>" />
 		</div>
 	</div>
 </div>
