--- a/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/rule/brook_version.htm
+++ b/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/rule/brook_version.htm
@@ -152,7 +152,7 @@ local brook_version = luci.sys.exec("[ -f '" .. brook_path .. "' ] && " .. brook
 	<div class="cbi-value-field">
 		<div class="cbi-value-description">
 			<span>【 <%=brook_version%>】</span>
-			<input class="cbi-button cbi-input-apply" type="submit" id="_brook-check_btn" onclick="onBtnClick_brook(this);" value="<%:Manually update%>">
+			<input class="cbi-button cbi-input-apply" type="submit" id="_brook-check_btn" onclick="onBtnClick_brook(this);" value="<%:Manually update%>" />
 			<span id="_brook-check_btn-detail"></span>
 		</div>
 	</div>
