--- a/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/rule/rule_version.htm
+++ b/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/rule/rule_version.htm
@@ -86,7 +86,7 @@ local chnlist_update = api.uci_get_type("global_rules", "chnlist_update", "1") =
 				<%:Manually update%>
 			</label>
 			<div class="cbi-value-field">
-				<input class="cbi-button cbi-input-apply" type="submit" id="update_rules_btn" onclick="update_rules(this)" value="<%:Manually update%>">
+				<input class="cbi-button cbi-input-apply" type="submit" id="update_rules_btn" onclick="update_rules(this)" value="<%:Manually update%>" />
 			</div>
 		</div>
 		
