--- a/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/rule/v2ray_version.htm
+++ b/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/rule/v2ray_version.htm
@@ -168,7 +168,7 @@ local V2ray_version = luci.sys.exec("[ -f '" .. V2ray_path .. "/v2ray' ] && " ..
 	<div class="cbi-value-field">
 		<div class="cbi-value-description">
 			<span>【 <%=V2ray_version%>】</span>
-			<input class="cbi-button cbi-input-apply" type="submit" id="_v2ray-check_btn" onclick="onBtnClick_v2ray(this);" value="<%:Manually update%>">
+			<input class="cbi-button cbi-input-apply" type="submit" id="_v2ray-check_btn" onclick="onBtnClick_v2ray(this);" value="<%:Manually update%>" />
 			<span id="_v2ray-check_btn-detail"></span>
 		</div>
 	</div>
