--- a/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/node_list/node_list.htm
+++ b/package/hong/lienol/luci-app-passwall/luasrc/view/passwall/node_list/node_list.htm
@@ -135,42 +135,73 @@ table td, .table .td {
 	var auto_ping_value = document.getElementsByClassName('auto_ping_value');
 	var index = 0;
 	function auto_ping() {
-		if (index >= auto_ping_value.length){ 
+		if (index >= auto_ping_value.length) { 
 			return;
 		}
-		var cbi_id = auto_ping_value[index].getAttribute("cbiid");
-		<% if compact_display_nodes and tonumber(compact_display_nodes) == 1 then %>
-			var remarks = document.getElementById("cbid.passwall." + cbi_id + ".remarks").value;
-			var address = null;
-			var port = null;
-			if (remarks.lastIndexOf("（") != -1 && remarks.lastIndexOf("）") != -1) {
-				var address_full = remarks.substring(remarks.lastIndexOf("（") + 1, remarks.lastIndexOf("）"));
-				address = address_full.substring(0, address_full.lastIndexOf(":"));
-				port = address_full.substring(address_full.lastIndexOf(":") + 1);
-			}
-		<% else %>
-			var address = document.getElementById("cbid.passwall." + cbi_id + ".address").value;
-			var port = document.getElementById("cbid.passwall." + cbi_id + ".port").value;
-		<% end %>
-		var json = JSON.stringify(auto_ping_value[index]);
-		ajax.post('<%=dsp.build_url("admin/vpn/passwall/ping_node")%>', {
-				index: index,
-				address: address,
-				port: port
-			},
-			function(x, result) {
-				if(x && x.status == 200) {
-					auto_ping_value[result.index].innerHTML = (result.ping ? result.ping : "--") + " ms";
+		var is_ping = auto_ping_value[index].getAttribute("ping");
+		if (is_ping == null) {
+			var cbi_id = auto_ping_value[index].getAttribute("cbiid");
+			<% if compact_display_nodes and tonumber(compact_display_nodes) == 1 then %>
+				var remarks = document.getElementById("cbid.passwall." + cbi_id + ".remarks").value;
+				var address = null;
+				var port = null;
+				if (remarks.lastIndexOf("（") != -1 && remarks.lastIndexOf("）") != -1) {
+					var address_full = remarks.substring(remarks.lastIndexOf("（") + 1, remarks.lastIndexOf("）"));
+					address = address_full.substring(0, address_full.lastIndexOf(":"));
+					port = address_full.substring(address_full.lastIndexOf(":") + 1);
 				}
-				index++;
-				auto_ping();
-			},
-			function(x) {
-				auto_ping_value[index].innerHTML = "<font style='color:red'><%:Timeout%></font>";
-				index++;
-				auto_ping();
-			},
-		);
+			<% else %>
+				var address = document.getElementById("cbid.passwall." + cbi_id + ".address").value;
+				var port = document.getElementById("cbid.passwall." + cbi_id + ".port").value;
+			<% end %>
+			var json = JSON.stringify(auto_ping_value[index]);
+			ajax.post('<%=dsp.build_url("admin/vpn/passwall/ping_node")%>', {
+					index: index,
+					address: address,
+					port: port
+				},
+				function(x, result) {
+					if(x && x.status == 200) {
+						for(var i = 0; i < auto_ping_value.length; i++) {
+							var obj = auto_ping_value[i];
+							var obj_cbi_id = obj.getAttribute("cbiid");
+							<% if compact_display_nodes and tonumber(compact_display_nodes) == 1 then %>
+								var obj_remarks = document.getElementById("cbid.passwall." + obj_cbi_id + ".remarks").value;
+								var obj_address = null;
+								var obj_port = null;
+								if (obj_remarks.lastIndexOf("（") != -1 && obj_remarks.lastIndexOf("）") != -1) {
+									var obj_address_full = obj_remarks.substring(obj_remarks.lastIndexOf("（") + 1, obj_remarks.lastIndexOf("）"));
+									obj_address = obj_address_full.substring(0, obj_address_full.lastIndexOf(":"));
+									obj_port = obj_address_full.substring(obj_address_full.lastIndexOf(":") + 1);
+								}
+							<% else %>
+								var obj_address = document.getElementById("cbid.passwall." + obj_cbi_id + ".address").value;
+								var obj_port = document.getElementById("cbid.passwall." + obj_cbi_id + ".port").value;
+							<% end %>
+							
+							if (address == obj_address && port == obj_port) {
+								auto_ping_value[i].setAttribute("ping", "1");
+								if (result.ping == null || result.ping.trim() == "")
+									auto_ping_value[i].innerHTML = "<font style='color:red'><%:Timeout%></font>";
+								else
+									auto_ping_value[i].innerHTML = result.ping + " ms";
+							}
+						}
+					}
+					index++;
+					auto_ping();
+				},
+				function(x) {
+					auto_ping_value[index].innerHTML = "<font style='color:red'><%:Timeout%></font>";
+					index++;
+					auto_ping();
+				},
+			);
+		}
+		else {
+			index++;
+			auto_ping();
+		}
 	}
 	
 	auto_ping();
