--- a/package/hong/luci-app-clash/luasrc/view/clash/status.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/status.htm
@@ -27,7 +27,7 @@
 <fieldset class="cbi-section">
 	<table width="100%" cellspacing="10">
 		<tr><td class="align-left" width="50%"><span><%:Global IP%> </span>&nbsp;:&nbsp;<span id="ip-ipify"><font color=red><%:Checking...%></font></span> <span id="ip-ipify-ipip"></span></td> <td  width="15%">  <span><%:Google%></span>&nbsp;:&nbsp;<span id="_google"><em><%:Collecting data...%></em></span></td><td   width="15%"><%:Youtube%> </span>&nbsp;:&nbsp;<span id="_youtube"><em><%:Collecting data...%></em></span></td><td  ><%:Github%> </span>&nbsp;:&nbsp;<span id="_github"><em><%:Collecting data...%></em></span></td></tr>	   
-	    <tr><td class="align-left" width="50%"><span><%:Domestic IP%> </span>&nbsp;:&nbsp;<span id="d-ip"><font color=red><%:Checking...%></font></span></td><td  width="15%"> <span><%:Baidu%></span>&nbsp;:&nbsp;<span  id="_baidu"><em><%:Collecting data...%></em></span></td> <td  width="15%"><%:Music.163%> </span>&nbsp;:&nbsp;<span id="_http-163"><em><%:Collecting data...%></em></span></td><td  ><%:Taobao%> </span>&nbsp;:&nbsp;<span id="_taobao"><em><%:Collecting data...%></em></span></td></tr>
+	    <tr><td class="align-left" width="50%"><span><%:Domestic IP%> </span>&nbsp;:&nbsp;<span id="d-ip"><font color=red><%:Checking...%></font></span></td><td  width="15%"> <span><%:Baidu%></span>&nbsp;:&nbsp;<span  id="_baidu"><em><%:Collecting data...%></em></span></td> <td  width="15%"><%:Music.163%> </span>&nbsp;:&nbsp;<span id="_http-163"><em><%:Collecting data...%></em></span></td><td  ><%:iQiyi%> </span>&nbsp;:&nbsp;<span id="_iqiyi"><em><%:Collecting data...%></em></span></td></tr>
     </table>
 </fieldset>
 
@@ -170,7 +170,7 @@ var HTTP = {
 			HTTP.checker('www.baidu.com', '_baidu');
 			HTTP.checker('www.google.com', '_google');
 			HTTP.checker('www.youtube.com', '_youtube');
-			HTTP.checker('www.taobao.com', '_taobao');
+			HTTP.checker('www.iqiyi.com', '_iqiyi');
 			HTTP.checker('github.com', '_github');
 			HTTP.checker('s1.music.126.net/style', '_http-163');
 
@@ -182,7 +182,7 @@ var HTTP = {
 	HTTP.checker('www.baidu.com', '_baidu');
 	HTTP.checker('www.google.com', '_google');
 	HTTP.checker('www.youtube.com', '_youtube');
-	HTTP.checker('www.taobao.com', '_taobao');
+	HTTP.checker('www.iqiyi.com', '_iqiyi');
 	HTTP.checker('github.com', '_github');
 	HTTP.checker('s1.music.126.net/style', '_http-163');
 
