--- a/package/hong/luci-app-clash/luasrc/view/clash/update.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/update.htm
@@ -58,7 +58,7 @@
 			if(status.clashtun_core==0){
 				coretun.innerHTML = status.clashtun_core ? '<b><font color=red><%:Not Installed%></font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
 			}else{
-				coretun.innerHTML = status.clashtun_core ? '<b><font color=green>'+status.clashr_core+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				coretun.innerHTML = status.clashtun_core ? '<b><font color=green>'+status.clashtun_core+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
 			}			
 			version.innerHTML = status.current_version ? '<b><font color=green>v'+status.current_version+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
 						
