--- a/package/hong/luci-app-clash/luasrc/view/clash/status.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/status.htm
@@ -26,8 +26,8 @@
 
 <fieldset class="cbi-section">
 	<table width="100%" cellspacing="10">
-		<tr><td class="align-left" width="50%"><span><%:Global IP%> </span>&nbsp;:&nbsp;<span id="ip-ipify"><font color=red><%:Checking...%></font></span> <span id="ip-ipify-ipip"></span></td> <td  width="15%">  <span><%:Google%></span>&nbsp;:&nbsp;<span id="_google"><em><%:Collecting data...%></em></span></td><td   width="15%"><%:Youtube%> </span>&nbsp;:&nbsp;<span id="_youtube"><em><%:Collecting data...%></em></span></td><td  ><%:Github%> </span>&nbsp;:&nbsp;<span id="_github"><em><%:Collecting data...%></em></span></td></tr>	   
-	    <tr><td class="align-left" width="50%"><span><%:Domestic IP%> </span>&nbsp;:&nbsp;<span id="d-ip"><font color=red><%:Checking...%></font></span></td><td  width="15%"> <span><%:Baidu%></span>&nbsp;:&nbsp;<span  id="_baidu"><em><%:Collecting data...%></em></span></td> <td  width="15%"><%:Music.163%> </span>&nbsp;:&nbsp;<span id="_http-163"><em><%:Collecting data...%></em></span></td><td  ><%:iQiyi%> </span>&nbsp;:&nbsp;<span id="_iqiyi"><em><%:Collecting data...%></em></span></td></tr>
+		<tr><td class="align-left" width="50%"><span><%:Global IP%> </span>&nbsp;:&nbsp;<span id="ip-ipify"><font color="red"><%:Checking...%></font></span> <span id="ip-ipify-ipip"></span></td> <td  width="15%">  <span><%:Google%></span>&nbsp;:&nbsp;<span id="_google"><em><%:Collecting data...%></em></span></td><td   width="15%"><%:Youtube%> </span>&nbsp;:&nbsp;<span id="_youtube"><em><%:Collecting data...%></em></span></td><td  ><%:Github%> </span>&nbsp;:&nbsp;<span id="_github"><em><%:Collecting data...%></em></span></td></tr>	   
+	    <tr><td class="align-left" width="50%"><span><%:Domestic IP%> </span>&nbsp;:&nbsp;<span id="d-ip"><font color="red"><%:Checking...%></font></span></td><td  width="15%"> <span><%:Baidu%></span>&nbsp;:&nbsp;<span  id="_baidu"><em><%:Collecting data...%></em></span></td> <td  width="15%"><%:Music.163%> </span>&nbsp;:&nbsp;<span id="_http-163"><em><%:Collecting data...%></em></span></td><td  ><%:iQiyi%> </span>&nbsp;:&nbsp;<span id="_iqiyi"><em><%:Collecting data...%></em></span></td></tr>
     </table>
 </fieldset>
 
@@ -108,15 +108,15 @@ var HTTP = {
 		let timeout = setTimeout(() => {
 			img.onerror = img.onload = null;
 			img = null;
-			document.getElementById(cbElID).innerHTML = '<b><font color=red><%:NO ACCESS%></font></b>'
+			document.getElementById(cbElID).innerHTML = '<b><font color="red"><%:NO ACCESS%></font></b>'
 		}, 1000);
 		img.onerror = () => {
 			clearTimeout(timeout);
-			document.getElementById(cbElID).innerHTML = '<b><font color=red><%:TIMEOUT%></font></b>'
+			document.getElementById(cbElID).innerHTML = '<b><font color="red"><%:TIMEOUT%></font></b>'
 		}
 		img.onload = () => {
 			clearTimeout(timeout);
-			document.getElementById(cbElID).innerHTML = '<b><font color=green><%:NORMAL%></font></b>'
+			document.getElementById(cbElID).innerHTML = '<b><font color="green"><%:NORMAL%></font></b>'
 		}
 		img.src = `https://${domain}/favicon.ico?${+(new Date)}`
 	}
@@ -152,12 +152,12 @@ var HTTP = {
 	var logo = document.getElementById('_logo');
 	XHR.poll(1, '<%=luci.dispatcher.build_url("admin", "services", "clash", "status")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
-			web.innerHTML = status.web ? '<a type="button" class="btn" style="background-color:black;padding: 5px;"  href="http://'+window.location.hostname+':'+status.dash_port+'/ui" target="_blank"/><b><font color=green><%:OPEN DASHBOARD%></font></b></a>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
-			clash.innerHTML = status.clash ? '<b><font color=green><%:RUNNING%></font> </b>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
-			ip.innerHTML = status.localip ? '<b><font color=green>'+status.localip+'</font> </b>' : '<em><b><font color=red><%:NOT SET%></font></b></em>';
-			port.innerHTML = status.dash_port ? '<b><font color=green>'+status.dash_port+'</font> </b>' : '<em><b><font color=red><%:NOT SET%></font></b></em>';
-			secret.innerHTML = status.dash_pass ? '<b><font color=green>'+status.dash_pass+'</font> </b>' : '<em><b><font color=red><%:NOT SET%></font></b></em>';
-			emode.innerHTML = status.e_mode ? '<b><font color=green style="text-transform: uppercase;">'+status.e_mode+'</font> </b>' : '<b><font color=red><%:NOT SET%></font></b>';	
+			web.innerHTML = status.web ? '<a type="button" class="btn" style="background-color:black;padding: 5px;"  href="http://'+window.location.hostname+':'+status.dash_port+'/ui" target="_blank"/><b><font color="green"><%:OPEN DASHBOARD%></font></b></a>' : '<b><font color="red"><%:NOT RUNNING%></font></b>';
+			clash.innerHTML = status.clash ? '<b><font color="green"><%:RUNNING%></font> </b>' : '<b><font color="red"><%:NOT RUNNING%></font></b>';
+			ip.innerHTML = status.localip ? '<b><font color="green">'+status.localip+'</font> </b>' : '<em><b><font color="red"><%:NOT SET%></font></b></em>';
+			port.innerHTML = status.dash_port ? '<b><font color="green">'+status.dash_port+'</font> </b>' : '<em><b><font color="red"><%:NOT SET%></font></b></em>';
+			secret.innerHTML = status.dash_pass ? '<b><font color="green">'+status.dash_pass+'</font> </b>' : '<em><b><font color="red"><%:NOT SET%></font></b></em>';
+			emode.innerHTML = status.e_mode ? '<b><font color="green" style="text-transform: uppercase;">'+status.e_mode+'</font> </b>' : '<b><font color="red"><%:NOT SET%></font></b>';	
 			IP.getIpifyIP();
 			IP.getIpipnetIP();
 
