--- a/package/hong/luci-app-clash/luasrc/view/clash/update.htm
+++ b/package/hong/luci-app-clash/luasrc/view/clash/update.htm
@@ -46,21 +46,21 @@
 		if ( x && x.status == 200 ) {
 		
 			if(status.clash_core==0){
-				core.innerHTML = status.clash_core ? '<b><font color=red><%:Not Installed%></font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				core.innerHTML = status.clash_core ? '<b><font color="red"><%:Not Installed%></font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 			}else{
-				core.innerHTML = status.clash_core ? '<b><font color=green>'+status.clash_core+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				core.innerHTML = status.clash_core ? '<b><font color="green">'+status.clash_core+'</font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 			}
 			if(status.clashr_core==0){
-				corer.innerHTML = status.clashr_core ? '<b><font color=red><%:Not Installed%></font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				corer.innerHTML = status.clashr_core ? '<b><font color="red"><%:Not Installed%></font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 			}else{
-				corer.innerHTML = status.clashr_core ? '<b><font color=green>'+status.clashr_core+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				corer.innerHTML = status.clashr_core ? '<b><font color="green">'+status.clashr_core+'</font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 			}
 			if(status.clashtun_core==0){
-				coretun.innerHTML = status.clashtun_core ? '<b><font color=red><%:Not Installed%></font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				coretun.innerHTML = status.clashtun_core ? '<b><font color="red"><%:Not Installed%></font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 			}else{
-				coretun.innerHTML = status.clashtun_core ? '<b><font color=green>'+status.clashtun_core+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+				coretun.innerHTML = status.clashtun_core ? '<b><font color="green">'+status.clashtun_core+'</font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 			}			
-			version.innerHTML = status.current_version ? '<b><font color=green>v'+status.current_version+'</font> </b>' : '<em><b><font color=red><%:Checking...%></font></b></em>';
+			version.innerHTML = status.current_version ? '<b><font color="green">v'+status.current_version+'</font> </b>' : '<em><b><font color="red"><%:Checking...%></font></b></em>';
 						
 		}
 	});
@@ -90,7 +90,7 @@ function version_check(btn)
 	
    else if(status.new_version==0)
    {
-	version_butt.innerHTML ='<center><input type="button" class="cbi-button cbi-button-reset" value="<%:Error Occured  |Return%>" onclick="return check_return(this)"/></center>';
+	version_butt.innerHTML ='<center><input type="button" class="cbi-button cbi-button-reset" value="<%:Error Occu"red"  |Return%>" onclick="return check_return(this)"/></center>';
   
 	}
 	else if(status.current_version >= status.new_version)
@@ -109,12 +109,12 @@ function core_check(btn)
     XHR.get('<%=luci.dispatcher.build_url("admin", "services", "clash", "check_status")%>', null, function(x, status) {
    if(status.new_core_version > status.clash_core)
    {
-	core_butt.innerHTML ='<center><b><font color=green><%:New Version :%>'+status.new_core_version+'</font> </b></center>';
+	core_butt.innerHTML ='<center><b><font color="green"><%:New Version :%>'+status.new_core_version+'</font> </b></center>';
 	 }
 	
    else if(status.new_core_version==0)
    {
-	core_butt.innerHTML ='<center><input type="button" class="cbi-button cbi-button-reset" value="<%:Error Occured  |Return%>" onclick="return core_return(this)"/></center>';
+	core_butt.innerHTML ='<center><input type="button" class="cbi-button cbi-button-reset" value="<%:Error Occu"red"  |Return%>" onclick="return core_return(this)"/></center>';
   
 	}
 	else if(status.clash_core >= status.new_core_version)
@@ -132,12 +132,12 @@ function clashr_core_check(btn)
     XHR.get('<%=luci.dispatcher.build_url("admin", "services", "clash", "check_status")%>', null, function(x, status) {
    if(status.new_clashr_core_version > status.clashr_core)
    {
-	corer_butt.innerHTML ='<center><b><font color=green><%:New Version :%>'+status.new_clashr_core_version+'</font> </b></center>';
+	corer_butt.innerHTML ='<center><b><font color="green"><%:New Version :%>'+status.new_clashr_core_version+'</font> </b></center>';
 	 }
 	
    else if(status.new_clashr_core_version==0)
    {
-	corer_butt.innerHTML ='<center><input type="button" class="cbi-button cbi-button-reset" value="<%:Error Occured  |Return%>" onclick="return clashr_core_return(this)"/></center>';
+	corer_butt.innerHTML ='<center><input type="button" class="cbi-button cbi-button-reset" value="<%:Error Occu"red"  |Return%>" onclick="return clashr_core_return(this)"/></center>';
   
 	}
 	else if(status.clashr_core >= status.new_clashr_core_version)
